[tool.poetry]
name = "google_api"
version = "0.1.0"
description = "test task for position 'Backend developer (Python)'"
authors = ["Aleksandr Maksimchuk"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.1.2"
psycopg2 = "^2.9.3"
SQLAlchemy = "^1.4.39"
pydantic = "^1.9.1"
requests = "^2.28.1"
gspread = "^5.4.0"
alembic = "^1.8.1"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.3"
flake8-commas = "^2.1.0"
flake8-printf-formatting = "^1.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
